# tyleo-bevy-minesweeper

./: Cargo.toml  LICENSE  README.md  package.json
board_plugin/: Cargo.toml
board_plugin/src/: lib.rs  type_registry.rs
board_plugin/src/components/: bomb.rs  mod.rs
board_plugin/src/resources/: board.rs  board_options.rs  board_position_option.rs  mod.rs  tile.rs  tile_map.rs  tile_size_option.rs
board_plugin/src/util/: mod.rs
board_plugin_lib/: Cargo.toml
board_plugin_lib/src/: board_plugin.rs  lib.rs
board_plugin_lib/src/components/: mod.rs  uncover.rs
board_plugin_lib/src/events/: bomb_explosion_event.rs  mod.rs  tile_mark_event.rs  tile_trigger_event.rs
board_plugin_lib/src/resources/: board.rs  board_assets.rs  board_options.rs  mod.rs
board_plugin_lib/src/systems/: input.rs  mark_tiles.rs  mod.rs  read_tile_trigger_event.rs  touch_input.rs  uncover_tiles.rs
board_plugin_lib/src/util/: bounds2.rs  mod.rs  touch_interpretation_data.rs
projects/board_plugin_lib/: Cargo.toml
projects/board_plugin_lib/src/: board_plugin.rs  lib.rs  type_registry.rs
projects/board_plugin_lib/src/components/: bomb_neighbor.rs  mod.rs
projects/board_plugin_lib/src/events/: board_completed_event.rs  mod.rs
projects/board_plugin_lib/src/resources/: board_assets.rs
projects/board_plugin_lib/src/systems/: mouse_input.rs  touch_input.rs  uncover_tiles.rs
projects/board_plugin_lib/src/util/: mod.rs
projects/minesweeper_bin/: Cargo.toml
projects/minesweeper_bin/src/: main.rs
projects/minesweeper_lib/: Cargo.toml
projects/minesweeper_lib/src/: board_plugin.rs  board_plugin_2.rs  config.rs  lib.rs  native_run.rs  run.rs  type_registry.rs  wasm.rs
projects/minesweeper_lib/src/components/: coordinates.rs  cover.rs  touch_interpretation_component.rs
projects/minesweeper_lib/src/config/: f32_clamp_config.rs  game_color_config.rs  game_config.rs  mod.rs  u16_vec2_config.rs  u8_color_config.rs  vec2_config.rs
projects/minesweeper_lib/src/ext/: app_ext.rs  mod.rs
projects/minesweeper_lib/src/resources/: board.rs  board_assets.rs  board_colors.rs  board_options.rs  mod.rs  sprite_material.rs
projects/minesweeper_lib/src/systems/: canvas_size_updater.rs  mod.rs  read_tile_trigger_event.rs  touch_input.rs  update_canvas_size_from_window.rs
projects/minesweeper_lib/src/util/: app_state.rs  canvas_size.rs  get_canvas_size.rs  mod.rs  register_types.rs  set_canvas_size.rs  tile_entities.rs
projects/minesweeper_lib/src/wasm/: f32_pair.rs  mod.rs  run.rs  u16_pair.rs
src/: lib.rs  main.rs  shared.rs
