[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
rand = "0.8"
serde = "1.0"

colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.25", optional = true }

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]
