[package]
name = "board_plugin_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = "1.0"

colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.25", optional = true }

# Engine
[dependencies.bevy]
version = "0.14.0"
default-features = false
features = ["bevy_asset", "bevy_render", "bevy_state", "bevy_text"]

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.bevy]
version = "0.14.0"
default-features = false
features = ["bevy_asset", "bevy_render", "bevy_state", "bevy_text", "webgl2"]

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

[features]
default = []
debug = ["colored", "bevy-inspector-egui"]
