[package]
name = "minesweeper_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "minesweeper_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = []
debug = ["board_plugin_lib/debug", "bevy-inspector-egui"]
process_assets = ["bevy/asset_processor", "bevy/multi_threaded"]

[dependencies]
board_plugin_lib = { version = "0.1.0", path = "../board_plugin_lib" }
bevy-inspector-egui = { version = "0.25", optional = true }

[dependencies.bevy]
# Engine
version = "0.14.0"
default-features = false
features = ["bevy_render", "bevy_winit", "png"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.14.0"
default-features = false
features = ["x11"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.92"
