[package]
name = "minesweeper_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
debug = ["dep:colored", "dep:bevy-inspector-egui"]
native = ["bevy/x11"]
process_assets = ["bevy/asset_processor", "bevy/multi_threaded"]
wasm = ["dep:wasm-bindgen", "bevy/webgl2"]

[dependencies]
rand = "0.8"
serde = "1.0"

bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_winit",
    "png",
] }

# debug
colored = { version = "2.0", optional = true }
bevy-inspector-egui = { version = "0.25", optional = true }

# wasm
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
